[gd_scene load_steps=9 format=3 uid="uid://c2urwpi4qyhut"]

[ext_resource type="Script" uid="uid://ddutyd47vyikb" path="res://pc/select.gd" id="1_i2vaj"]
[ext_resource type="Texture2D" uid="uid://qwjeeiea4jmu" path="res://assets/pc/select-window-x3.png" id="2_3wnuv"]
[ext_resource type="Texture2D" uid="uid://d2iik8lx0g5fb" path="res://assets/pc/select-user-input-x3.png" id="3_klri6"]
[ext_resource type="Texture2D" uid="uid://doslssqfj7kv2" path="res://assets/pc/ok-button-x3.png" id="4_qm63d"]
[ext_resource type="Texture2D" uid="uid://bkgef2i32vguq" path="res://assets/pc/cancel-button-x3.png" id="5_r3koq"]
[ext_resource type="Texture2D" uid="uid://wvftwo4ht26u" path="res://assets/pc/exit-button-x3.png" id="6_u7pig"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glaor"]
texture = ExtResource("3_klri6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_84y7g"]
texture = ExtResource("3_klri6")

[node name="select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2vaj")

[node name="window" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 200.0
texture = ExtResource("2_3wnuv")

[node name="start" type="LineEdit" parent="window"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
offset_left = 6.0
offset_top = -18.0
offset_right = -6.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_glaor")
theme_override_styles/read_only = SubResource("StyleBoxTexture_glaor")
theme_override_styles/normal = SubResource("StyleBoxTexture_glaor")

[node name="end" type="LineEdit" parent="window"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
offset_left = 6.0
offset_top = 57.0
offset_right = -6.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_84y7g")
theme_override_styles/read_only = SubResource("StyleBoxTexture_84y7g")
theme_override_styles/normal = SubResource("StyleBoxTexture_84y7g")

[node name="ok" type="TextureButton" parent="window"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = -6.0
grow_vertical = 0
texture_normal = ExtResource("4_qm63d")
texture_pressed = ExtResource("4_qm63d")
texture_hover = ExtResource("4_qm63d")
texture_disabled = ExtResource("4_qm63d")
texture_focused = ExtResource("4_qm63d")

[node name="cancel" type="TextureButton" parent="window"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -30.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("5_r3koq")
texture_pressed = ExtResource("5_r3koq")
texture_hover = ExtResource("5_r3koq")
texture_disabled = ExtResource("5_r3koq")
texture_focused = ExtResource("5_r3koq")

[node name="exit" type="TextureButton" parent="window"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.0
offset_bottom = 21.0
grow_horizontal = 0
texture_normal = ExtResource("6_u7pig")
texture_pressed = ExtResource("6_u7pig")
texture_hover = ExtResource("6_u7pig")
texture_disabled = ExtResource("6_u7pig")
texture_focused = ExtResource("6_u7pig")

[connection signal="pressed" from="window/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="window/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="window/exit" to="." method="_on_exit_pressed"]
